[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/menu/New Piskel (2).png" type="Texture" id=1]
[ext_resource path="res://scripts/else/updatelog.gd" type="Script" id=2]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 2, 64, 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="update log" type="Node2D"]

[node name="Button" type="Button" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "<-"

[node name="full" type="Button" parent="."]
margin_left = 35.0
margin_top = 2.0
margin_right = 67.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "full"

[node name="a01b" type="Button" parent="."]
margin_left = 75.0
margin_top = 2.0
margin_right = 107.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0.1"

[node name="a02b" type="Button" parent="."]
margin_left = 110.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0.2"

[node name="a03b" type="Button" parent="."]
margin_left = 145.0
margin_top = 2.0
margin_right = 177.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0.3"

[node name="a04b" type="Button" parent="."]
margin_left = 180.0
margin_top = 2.0
margin_right = 212.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0.4"

[node name="a05b" type="Button" parent="."]
margin_left = 215.0
margin_top = 2.0
margin_right = 227.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0.5"

[node name="a06b" type="Button" parent="."]
margin_left = 250.0
margin_top = 2.0
margin_right = 282.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "final"

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="full" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver 1.0 (Mon 22th Aug):

Game full release

-Fixed spawn rate of blocks
-Added credits that you can see from the options screen
-Added 3 backgrounds that were missing
--The win background is identicle to the lose one but with a rainbow
--The options background is a wierd red gradient because I didn't want to be creative
--The shop background is a garage with a table with the different items they sell
-Added music and sound effects
--There are now 4 different songs playing in different scenes
--In the lose screen you can hear the rain
--New sound effect for when moving a block
--New sound effect for when buying upgrades

-New features
--Now there is a small chance of roulette blocks to spawn which rotate through the different blocks and count as all of them
--Added upgrades
---Fortune increases the chance of rare blocks to spawn
---Score boost increases a score multiplyer
---Slow timer slows the in-game timer
--Added a money system
---You get the same amount of money as the amount of points you get in-game
---You can use money to buy upgrades

-Fixed bugs
--You can actually get points now

-Known bugs
--There is still the bug where the cursor doesn't move the right blocks after leaving the gameplay scene
---To work around this bug please spam the left and down arrow keys or S and D keys

ver alpha 0.5 (Fri 15th July):
-Added a loading screen before opening the main menu just for fun
-Added option to disable goals
-Changed how the timer looks (may have caused the timer speed to change)
-Changed the layout of the options screen so I will be able to fit more settings in later when I need to 
-There is a chance of fossils to spawn now
-Added icons that show up when the ecs key is pressed in the hub world
-Added fish that randomly move around the ocean in the hub world (they use block textures right now but will change that soon)

ver alpha 0.4 (Mon 4th July):
-Added controller support
-Blocks give you significantly more points now
-It costs 500 points to continue now instead of 50
-added new difficulty levels
--Normal is the same as before but with better sprites
--Colour blind mode has blocks that are different shapes and the background dissapears. Also the timer moves a tiny bit slower
--Easy mode makes all blocks use the same sprites as older vesions but the timer moves 10 times slower too
-Added a background to the gameplay and losing scenes
-You can now set a goal in the options screen and once you reach a higher score, you will be sent to the winning screen
-Changed the texture of the play game button (not final)
-Improved this update log
-Added a hub world (still needs a lot of work) which you can find in the options screen by clicking on the robot icon on the bottom right
-You can now move through the main menu and update log screens using only keyboard (I will try to make this compatible with all scenes)

-Bug fixes
--Fixed bug where you get to continue even when you don't have the required points
-Actually fixed the bug where the wrong blocks move

ver alpha 0.3 (Sat 4th June):
-Changed how the update numbers work
-Made it so that only the blocks you matched will clear
-Added personal highscore 
-Added a highly requested tutorial in the options screen
-Improved the UI again

-Bug fixes
--Patched bug where if you leave the game and go back into it, you will move the wrong blocks

ver 1.1 (Thu 2nd June):
-Updated some UI elements
-Added a message that willappear when you take too long to clear blocks
-Now you can continue playing even after you lose by subtracting 50 points

ver 1.0 (Tue 31st May):
Game Released"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a01" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver 1.0 (Tue 31st May):
Game Released"

[node name="a02" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver 1.1 (Thu 2nd June):
-Updated some UI elements
-Added a message that willappear when you take too long to clear blocks
-Now you can continue playing even after you lose by subtracting 50 points"

[node name="a03" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver alpha 0.3 (Sat 4th June):
-Changed how the update numbers work
-Made it so that only the blocks you matched will clear
-Added personal highscore 
-Added a highly requested tutorial in the options screen
-Improved the UI again

-Bug fixes
--Patched bug where if you leave the game and go back into it, you will move the wrong blocks"

[node name="a04" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver alpha 0.4 (Mon 4th July):
-Added controller support
-Blocks give you significantly more points now
-It costs 500 points to continue now instead of 50
-added new difficulty levels
--Normal is the same as before but with better sprites
--Colour blind mode has blocks that are different shapes and the background dissapears. Also the timer moves a tiny bit slower
--Easy mode makes all blocks use the same sprites as older vesions but the timer moves 10 times slower too
-Added a background to the gameplay and losing scenes
-You can now set a goal in the options screen and once you reach a higher score, you will be sent to the winning screen
-Changed the texture of the play game button (not final)
-Improved this update log
-Added a hub world (still needs a lot of work) which you can find in the options screen by clicking on the robot icon on the bottom right
-You can now move through the main menu and update log screens using only keyboard (I will try to make this compatible with all scenes)

-Bug fixes
--Fixed bug where you get to continue even when you don't have the required points
-Actually fixed the bug where the wrong blocks move"

[node name="a05" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver alpha 0.5 (Fri 15th July):
-Added a loading screen before opening the main menu just for fun
-Added option to disable goals
-Changed how the timer looks (may have caused the timer speed to change)
-Changed the layout of the options screen so I will be able to fit more settings in later when I need to 
-There is a chance of fossils to spawn now
-Added icons that show up when the ecs key is pressed in the hub world
-Added fish that randomly move around the ocean in the hub world (they use block textures right now but will change that soon)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a06" type="RichTextLabel" parent="Node2D"]
margin_left = 1.0
margin_top = 24.0
margin_right = 601.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
text = "ver 1.0 (Mon 22th Aug):

Game full release

-Fixed spawn rate of blocks
-Added credits that you can see from the options screen
-Added 3 backgrounds that were missing
--The win background is identicle to the lose one but with a rainbow
--The options background is a wierd red gradient because I didn't want to be creative
--The shop background is a garage with a table with the different items they sell
-Added music and sound effects
--There are now 4 different songs playing in different scenes
--In the lose screen you can hear the rain
--New sound effect for when moving a block
--New sound effect for when buying upgrades

-New features
--Now there is a small chance of roulette blocks to spawn which rotate through the different blocks and count as all of them
--Added upgrades
---Fortune increases the chance of rare blocks to spawn
---Score boost increases a score multiplyer
---Slow timer slows the in-game timer
--Added a money system
---You get the same amount of money as the amount of points you get in-game
---You can use money to buy upgrades

-Fixed bugs
--You can actually get points now

-Known bugs
--There is still the bug where the cursor doesn't move the right blocks after leaving the gameplay scene
---To work around this bug please spam the left and down arrow keys or S and D keys"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
visible = false
position = Vector2( 230, 23 )
scale = Vector2( 0.375, 2.25 )
frames = SubResource( 3 )
speed_scale = 3.0
playing = true

[connection signal="pressed" from="Button" to="Node2D" method="_on_Button_pressed"]
[connection signal="pressed" from="full" to="Node2D" method="_on_full_pressed"]
[connection signal="pressed" from="a01b" to="Node2D" method="_on_a01b_pressed"]
[connection signal="pressed" from="a02b" to="Node2D" method="_on_a02b_pressed"]
[connection signal="pressed" from="a03b" to="Node2D" method="_on_a03b_pressed"]
[connection signal="pressed" from="a04b" to="Node2D" method="_on_a04b_pressed"]
[connection signal="pressed" from="a05b" to="Node2D" method="_on_a05b_pressed"]
[connection signal="pressed" from="a06b" to="Node2D" method="_on_a06b_pressed"]
